# dysco

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: main.yaml
configs/data/: hicodet.yaml
configs/debug/: default.yaml
configs/detector/: detr.yaml
configs/experiment/: clip-vit_b_16.yaml  clip-vit_l_14.yaml  longclip_b.yaml  longclip_l.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml
configs/logger/: default.yaml
configs/model/: clip_dysco.yaml  long_clip_dysco.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
scripts/: precompute_vision_features.py
src/: main.py  trainer.py
src/data/: _base.py  hicodet.py  hoi_datamodule.py
src/data/components/: interaction_transforms.py
src/detectors/: detr.py
src/models/: dysco.py
src/models/components/: classifier.py
src/models/encoders/: _base.py
src/models/encoders/multimodal/: clip.py  long_clip.py
src/utils/: __init__.py  hicodet_ops.py  hoi_map_metric.py  img_ops.py  logger.py  misc.py
